# Perceptron

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  main_test.cpp  main_train.cpp  perceptron.cpp  perceptron.hpp  perceptron.py
database/: AND.txt  OR.txt
include/: dataset.hpp  neuron.hpp  perceptron.hpp
src/: dataset.cpp  neuron.cpp  perceptron.cpp
